force-app/main/default/objects/APILog__c/APILog__c.object-meta.xml
<CustomObject>
    <label>APILog</label>
    <nameField>
        <displayFormat>API-{0000}</displayFormat>
        <label>APILogs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APILogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>