force-app/main/default/objects/APILog__c/fields/Event_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_Record_ID__c</fullName>
    <label>Event Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>