force-app/main/default/objects/APILog__c/fields/ResponseMap__c.field-meta.xml
<CustomField>
    <fullName>ResponseMap__c</fullName>
    <label>ResponseMap</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>