force-app/main/default/objects/APILog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Body__c</columns>
    <columns>Endpoint__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>